--- a/data-rest/src/main/resources/application.yml
+++ b/data-rest/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://172.16.135.15:3306/autoconfiguration
-    username: mns
-    password: dltmxmdlsxjspt
+    url: jdbc:mysql://localhost:3306/community?characterEncoding=UTF-8&serverTimezone=UTC
+    username: root
+    password: 52choiinsuk
     driver-class-name: com.mysql.jdbc.Driver
   data:
     rest:
@@ -10,4 +10,4 @@ spring:
       default-page-size: 10
       max-page-size: 10
 server:
-  port: 8081
+  port: 9092
