--- a/rest-web/src/main/resources/application.yml
+++ b/rest-web/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 spring:
   datasource:
-    url: jdbc:mysql://172.16.135.15:3306/autoconfiguration
-    username: mns
-    password: dltmxmdlsxjspt
+    url: jdbc:mysql://localhost:3306/community?characterEncoding=UTF-8&serverTimezone=UTC
+    username: root
+    password: 52choiinsuk
     driver-class-name: com.mysql.jdbc.Driver
 #  jackson:
 #    serialization:
 #      fail-on-empty-beans: false #빈값은 직렬화하지 않음
 server:
-  port: 8081
+  port: 9092
